# cmake_tutorial

./: .gitignore  README.md
AutoConf/: Makefile.in  configure.ac  example.c
Makefile/: Makefile  example.c
Singularity/: example.def  example_submit_mpi.sh
cmake/: CMakeLists.txt
cmake/src/: CMakeLists.txt  example.c
src/: ex_table_01.c
